stylistic fixes and spacing cuz it was annoying me

--- a/go/static/css/styles.css
+++ b/go/static/css/styles.css
@@ -47,6 +47,7 @@ body {
     font-size: 16px;
     padding: 7px 20px 7px 40px;
     border: 1px solid #ddd;
-    margin-bottom: 12px;
     float: right;
+    margin-top: 21px;
+    margin-bottom: 10.5px;
 }
